@startuml
class Student {
  int id
  String firstName
  String lastName
  int age
  double grade
}

class StudentDAO {
  +addStudent(Student)
  +updateStudent(Student)
  +deleteStudent(int id)
  +getStudent(int id)
  +getAllStudents()
}

class DatabaseManager {
  +connect()
  +disconnect()
  +getConnection()
}

class Main {
  +main(String[] args)
}

StudentDAO --> Student
Main --> StudentDAO
Main --> DatabaseManager
StudentDAO --> DatabaseManager
@enduml 